# bendy-message

./: .env.example  .gitignore  Cargo.toml  README.md  maintain.md  plan.md
.github/workflows/: deploy.yml
admin/: index.html
crates/cf-worker/: Cargo.toml  wrangler.toml
crates/cf-worker/src/: admin.rs  auth.rs  election.rs  lib.rs  registry.rs  storage.rs
crates/core/: Cargo.toml
crates/core/src/: election.rs  error.rs  lib.rs  message.rs  registry.rs  router.rs  storage.rs
crates/core/tests/: core_tests.rs
crates/vercel-worker/: Cargo.toml  vercel.json
crates/vercel-worker/api/: admin.rs  election.rs  main.rs  registry.rs  storage.rs
migrations/d1/: 001_init.sql
migrations/pg/: 001_init.sql
